[gd_scene load_steps=8 format=2]

[ext_resource path="res://Elements/Weather/WindFixed/WindFixed.gd" type="Script" id=1]
[ext_resource path="res://Art/Weather/Wind.png" type="Texture" id=2]
[ext_resource path="res://Art/temp/wind_texture.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
resource_local_to_scene = true
extents = Vector2( 100, 60 )

[sub_resource type="RectangleShape2D" id=4]
resource_local_to_scene = true
extents = Vector2( 34, 34 )

[node name="WindFixed" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 1 )

[node name="EffectArea" type="Area2D" parent="."]
rotation = -0.785398
collision_layer = 0
collision_mask = 2

[node name="AnimatedSprite" type="AnimatedSprite" parent="EffectArea"]
position = Vector2( 0, -40 )
scale = Vector2( 2, 2 )
frames = SubResource( 2 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EffectArea"]
position = Vector2( 100, 0 )
shape = SubResource( 3 )

[node name="ClickArea" type="Area2D" parent="."]
collision_layer = 524288
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
shape = SubResource( 4 )

[connection signal="body_entered" from="EffectArea" to="." method="_on_EffectArea_body_entered"]
[connection signal="body_exited" from="EffectArea" to="." method="_on_EffectArea_body_exited"]
[connection signal="mouse_entered" from="ClickArea" to="." method="_on_ClickArea_mouse_entered"]
[connection signal="mouse_exited" from="ClickArea" to="." method="_on_ClickArea_mouse_exited"]
